# text-mallet

./: .gitignore  .readthedocs.yaml  LICENSE  README-PyPi.md  README.md  example.html  pyproject.toml  surprisal_heatmap.html
docs/: requirements.txt
docs/source/: about.rst  conf.py  index.rst  installation.rst  pipeline.rst  quickstart.rst
docs/source/methods/: pos_filtering.rst  structural.rst  structural_hier.rst
docs/source/usage/: basics.rst  datasets.rst
examples/: mutual_info_viz.py  pipeline_sanity_check_de.py  pipeline_sanity_check_en.py
examples/mutual-information/: visualise_density.py
examples/reconstruction-requests/: collect-reconstructions.py
examples/sanity-checks/: check_context_de.html  check_context_en.html  check_context_lengths.py  heatmap.html  heatmap_en.html  obfuscate.py  obfuscate_lemmatize.py  obfuscate_pos.py  obfuscate_pos_single.py  obfuscate_shannon.py  obfuscate_shannon_single.py  obfuscate_structural_hier.py  obfuscate_structural_hier_single.py  obfuscate_structural_linear.py  obfuscate_structural_linear_single.py  output.txt
examples/sanity-checks/chunking/: obfuscate-mi.py
examples/sanity-checks/results/mutual-info-obfus/obfuscated_ckpt_0_5/: data-00000-of-00001.arrow  dataset_info.json  state.json
examples/sanity-checks/results/mutual-info-obfus/obfuscated_ckpt_5_10/: data-00000-of-00001.arrow  state.json
experiments/: overview.py  push.py
src/: dataloader.py
src/reef/core/: pipeline.py
src/reef/dataloaders/: base.py  dataloader.py  txt_loader.py
src/reef/obfuscators/: base.py  lemmatise.py  replace.py  scramble.py  spacy_registry.py  surprisal.py
src/tmallet/: __init__.py
src/tmallet/core/: pipeline.py
src/tmallet/obfuscators/: __init__.py  base.py  information_reduction.py  replace.py  replacement_token.py  scramble.py  scramble_hier.py  scramble_linear.py  shannon.py  spacy_registry.py
src/tmallet/obfuscators/morph/: lemmatise.py  lemmatizer.py
src/tmallet/obfuscators/pos/: config.py  pos_filter.py
src/tmallet/obfuscators/shannon/: config.py  shannon_bert.py  shannon_filter.py  visualise.py
src/tmallet/obfuscators/shannon/impl/: __init__.py  analysis.py  calc.py  visualise.py
src/tmallet/obfuscators/structural/: config.py  scramble_hier.py  scramble_linear.py
src/tmallet/shannon/: __init__.py  analysis.py  calc.py  visualise.py
src/tmallet/surprisal/: __init__.py  analysis.py  calc.py  surprisal_heatmap.html  test.py  visualise.py
src/tmallet/utils/: __init__.py  helper.py  pos_tagger.py  spacy_registry.py
tests/: test_all_obfuscators.py  test_lemmatize.py  test_mi_filter.py  test_pipeline.py  test_pos_filter.py  test_scramble.py  test_structural.py  test_structural_hier.py  test_textdata.py  test_wordstat.py
