[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-mallet"
version = "0.1.0"
description = "Toolkit for Text Obfuscation."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Daniel Gallagher", email = "gallagher@infai.org"}
]
keywords = ["nlp", "obfuscation", "anonymisation", "copyright-protection"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "spacy>=3.0.0",
    "nltk>=3.6.0",
    "wordfreq>=3.1.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/DanielGall500/reef"
Repository = "https://github.com/DanielGall500/reef"
Documentation = "https://github.com/DanielGall500/reef"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tmallet*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
