[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-mallet"
version = "0.1.5"
description = "Toolkit for Obfuscating Text Through Transformations."
readme = "README-PyPi.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "CORAL", email = "gallagher.eu@protonmail.com"}
]
keywords = ["nlp", "obfuscation", "copyright-protection", "derived text formats"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "spacy>=3.0.0",
    "wordfreq>=3.1.1",
    "pydantic>=2.13.2",
    "sacremoses>=0.1.1",
    "syntok>=1.4.4",
    "pandas>=3.0.1",
    "transformers>=5.9.0",
    "datasets>=4.8.5",
    "torch>=2.12.0",
    "plotnine>=0.15.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "sphinx>=9.1.0",
    "shibuya"
]

[project.urls]
Homepage = "https://text-mallet.readthedocs.io/"
Repository = "https://github.com/DanielGall500/reef"
Documentation = "https://text-mallet.readthedocs.io/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tmallet*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
testpaths = [
    "tests"
]
python_files = [
    "test_*.py",
    "*_test.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]
